Update window title

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
     </style>
 {% endblock %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Minerva Cafes{% endblock %}
 
 {% block content %}
 
